src/objects/Round_Robin_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Next_Assignee__c</fullName>
        <label>Next Assignee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Assignee__c</fullName>
        <label>Special Assignee</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Size__c</fullName>
        <label>Total Size</label>
        <summaryForeignKey>Round_Robin_Assignee__c.Round_Robin_Setup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Round Robin Setup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Next_Assignee__c</columns>
        <columns>Special_Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Round Robin Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>